--- a/src/Components/ScrollButton/ScrollButton.module.css
+++ b/src/Components/ScrollButton/ScrollButton.module.css
@@ -5,7 +5,7 @@
   }
   
   .scrollButton {
-    background-color: green;
+    background-color:rgb(45, 244, 161) ;
     border: none;
     color: white;
     padding: 10px 20px;
