--- a/src/Components/AdminPanel/Admin.module.css
+++ b/src/Components/AdminPanel/Admin.module.css
@@ -53,7 +53,7 @@
   display: flex;
   flex-direction: column;
   height: 70px;
-  width: 400px;
+  width: 300px;
 }
 .save {
   font-family: "Unbounded", sans-serif;
@@ -75,10 +75,19 @@
   transition: all 0.3s;
 }
 .inputs {
-  width: 500px;
+  width: 370px;
   border: 1px solid black;
   padding: 10px;
-  margin-left: 30px;
-  margin-top: 30px;
   border-radius: 20px;
+}
+.inputs1{
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  width: 370px;
+  border: 1px solid black;
+  padding: 10px;
+  border-radius: 20px;
+  margin-left: 60px;
+  margin-top: 50px;
 }
