--- a/src/Components/FAQ/FAQcom.module.css
+++ b/src/Components/FAQ/FAQcom.module.css
@@ -102,6 +102,8 @@
 }
 .darkMode .contact {
   background-color: #403e3e;
+  padding-bottom: 120px;
+ 
 }
 .darkMode .help {
   color: #fff;
@@ -113,7 +115,18 @@
   background-color: #403e3e;
   color: #fff;
 }
-
+.darkMode{
+  background-color: #403e3e;
+}
+.darkMode .marq{
+  background-color: #403e3e;
+  color: #fff;
+  padding-bottom: 1090px;
+}
+.darkMode .imag{
+  background-color: #403e3e;
+  
+}
 @media (max-width: 800px) {
   .bgabout {
     width: 1540px;
