--- a/src/Components/Main.jsx/Info/Info.module.css
+++ b/src/Components/Main.jsx/Info/Info.module.css
@@ -85,7 +85,7 @@
   border-top-left-radius: 90px;
   position: relative;
   height: 1100px;
- 
+  top: 100px;
 }
 .countSection {
   display: grid;
@@ -157,7 +157,6 @@
     margin-bottom: 50px;
 }
 .name{
- 
   position: absolute;
   right: 120px;
 }
@@ -183,6 +182,11 @@
   color: rgb(45, 244, 161);
   font-weight: 400;
 }
+.darkMode{
+  background-color: #1e1e1e;
+
+}
+
 .darkMode .first{
   background-color: #9d8189;
 }
@@ -201,8 +205,11 @@
 .darkMode .third p{
   color: #fff;
 }
-
-
+@media (max-width: 800px) {
+  .darkMode {
+    width: 1540px;
+  }
+}
 
 
 
