--- a/src/Components/Navbar/Navbar.module.css
+++ b/src/Components/Navbar/Navbar.module.css
@@ -31,7 +31,11 @@ ul li a {
   color: #fff;
   font-size: 20px;
 }
-
+.menu2{
+  display: flex;
+  flex-direction: column;
+  gap: 0;
+}
 ul li a:hover {
   color: #06d6a0;
   cursor: pointer;
